--- a/GitStars/Application/Info.plist
+++ b/GitStars/Application/Info.plist
@@ -28,10 +28,14 @@
 			</array>
 		</dict>
 	</dict>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>linkedin</string>
-        <string>github</string>
-    </array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SFProText-Regular.ttf</string>
+	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>linkedin</string>
+		<string>github</string>
+	</array>
 </dict>
 </plist>
